--- a/button-playground/scss/styles.scss
+++ b/button-playground/scss/styles.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
+	background: #d0d0d0;
 	margin: 50px;
 }
 
@@ -8,65 +9,107 @@ hr {
 	margin: 50px 0;
 }
 
-.button {
-	cursor: pointer;
-	font-family: "Overpass", sans-serif;
-	font-optical-sizing: auto;
-	font-size: 16px;
-	font-style: normal;
-	font-weight: 400;
-}
-
 .button-1 {
 	align-items: center;
 	background: #28724F;
 	border-radius: 6px;
-	color: #fff;
 	column-gap: 12px;
+	cursor: pointer;
 	display: flex;
-	line-height: 16px;
-	padding: 6px 6px 6px 18px;
+	font-family: "Overpass", sans-serif;
+	font-size: 16px;
+	overflow: hidden;
+	padding: 6px 6px 6px 0;
 	width: fit-content;
 
 	span {
+		color: #fff;
+		left: 0;
+		padding-left: 18px;
 		position: relative;
 		top: 2px;
+		transition: all 500ms ease 50ms;
+		z-index: 1;
 	}
 
 	.icon-wrapper {
-		background: #fff;
-		border-radius: 4px;
 		align-items: center;
 		display: flex;
 		height: 32px;
 		justify-content: center;
+		position: relative;
 		width: 32px;
+
+		&::before {
+			background: #fff;
+			border-radius: 4px;
+			content: '';
+			height: 100%;
+			position: absolute;
+			width: 100%;
+		}
+
+		svg {
+			display: block;
+			fill: #28724F;
+			position: relative;
+			right: 0;
+			transition: right 500ms ease 50ms;
+		}
 	}
+
+	&:hover {
+
+		span {
+			color: #28724F;
+			left: 5px;
+		}
+
+		.icon-wrapper {
+
+			svg {
+				right: 5px;
+			}
+		}
+	}
+}
+
+// **************************************************
+
+@keyframes icon-wrapper-expand {
+	from { height: 32px; width: 32px; }
+	to { height: 268.21px; width: 268.21px; }
+}
+
+@keyframes icon-wrapper-contract {
+	from { height: 268.21px; width: 268.21px; }
+	to { height: 32px; width: 32px; }
+}
+
+@keyframes icon-wrapper-contract-2 {
+	0% { height: 32px; width: 32px; }
+	50% { height: 22px; width: 22px; }
+	100% { height: 32px; width: 32px; }
+}
+
+// **************************************************
+
+.button-1.button-test-in {
+
+	.icon-wrapper::before {
+		animation-duration: 250ms;
+		animation-fill-mode: forwards;
+		animation-name: icon-wrapper-expand;
+		animation-timing-function: ease-in-out;
+	}
+}
+
+.button-1.button-test-out {
 	
-	svg {
-		display: block;
-		fill: #28724F;
+	.icon-wrapper::before {
+		animation:
+			icon-wrapper-contract 250ms ease-in-out,
+			icon-wrapper-contract-2 400ms ease-out 250ms
+		;
 	}
-
-	&.button-test-in {
-		animation-duration: 1000ms;
-		animation-fill-mode: forwards;
-		animation-name: button-test-in;
-	}
-
-	&.button-test-out {
-		animation-duration: 1000ms;
-		animation-fill-mode: forwards;
-		animation-name: button-test-out;
-	}
-}
-
-@keyframes button-test-in {
-	from { transform: translateX(0); }
-	to { transform: translateX(50px); }
-}
-
-@keyframes button-test-out {
-	from { transform: translateX(50px); }
-	to { transform: translateX(0); }
 }
