--- a/button-playground/scss/styles.scss
+++ b/button-playground/scss/styles.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root {
+	--btn-width: 0;
+}
+
 body {
 	background: #d0d0d0;
 	margin: 50px;
@@ -78,15 +82,15 @@ hr {
 
 @keyframes icon-wrapper-expand {
 	from { height: 32px; width: 32px; }
-	to { height: 268.21px; width: 268.21px; }
+	to { height: var(--btn-width); width: var(--btn-width); }
 }
 
 @keyframes icon-wrapper-contract {
-	from { height: 268.21px; width: 268.21px; }
+	from { height: var(--btn-width); width: var(--btn-width); }
 	to { height: 32px; width: 32px; }
 }
 
-@keyframes icon-wrapper-contract-2 {
+@keyframes icon-wrapper-bounce {
 	0% { height: 32px; width: 32px; }
 	50% { height: 22px; width: 22px; }
 	100% { height: 32px; width: 32px; }
@@ -109,7 +113,7 @@ hr {
 	.icon-wrapper::before {
 		animation:
 			icon-wrapper-contract 250ms ease-in-out,
-			icon-wrapper-contract-2 400ms ease-out 250ms
+			icon-wrapper-bounce 400ms ease-out 250ms
 		;
 	}
 }
