--- a/button-playground/css/styles.css
+++ b/button-playground/css/styles.css
@@ -9,51 +9,73 @@ body {
 hr {
   margin: 50px 0; }
 
-.button-1 {
+.button {
   align-items: center;
-  background: #28724F;
+  background: transparent;
   border-radius: 6px;
   column-gap: 12px;
   cursor: pointer;
   display: flex;
-  font-family: "Overpass", sans-serif;
+  font-family: 'Overpass', sans-serif;
   font-size: 16px;
-  overflow: hidden;
-  padding: 6px 6px 6px 0;
+  transition: background 500ms;
   width: fit-content; }
-  .button-1 span {
-    color: #fff;
-    left: 0;
-    padding-left: 18px;
+  .button span {
+    color: #000;
     position: relative;
-    top: 2px;
-    transition: all 500ms ease 50ms;
-    z-index: 1; }
-  .button-1 .icon-wrapper {
+    top: 2px; }
+  .button .icon-wrapper {
     align-items: center;
     display: flex;
     height: 32px;
     justify-content: center;
     position: relative;
     width: 32px; }
-    .button-1 .icon-wrapper::before {
-      background: #fff;
+    .button .icon-wrapper::before {
+      background: #28724F;
       border-radius: 4px;
       content: '';
       height: 100%;
       position: absolute;
+      transition: background 750ms;
       width: 100%; }
-    .button-1 .icon-wrapper svg {
+    .button .icon-wrapper svg {
       display: block;
-      fill: #28724F;
+      fill: #fff;
       position: relative;
-      right: 0;
-      transition: right 500ms ease 50ms; }
-  .button-1:hover span {
-    color: #28724F;
-    left: 5px; }
-  .button-1:hover .icon-wrapper svg {
-    right: 5px; }
+      transition: fill 750ms; }
+  .button:hover {
+    background: #28724F; }
+    .button:hover span {
+      color: #fff; }
+    .button:hover .icon-wrapper::before {
+      background: #fff; }
+    .button:hover .icon-wrapper svg {
+      fill: #28724F; }
+
+.button-1 {
+  background: #28724F;
+  overflow: hidden;
+  padding: 6px 6px 6px 0; }
+  .button-1 span {
+    color: #fff;
+    left: 0;
+    padding-left: 18px;
+    transition: all 500ms ease 50ms;
+    z-index: 1; }
+  .button-1 .icon-wrapper::before {
+    background: #fff; }
+  .button-1 .icon-wrapper svg {
+    fill: #28724F;
+    right: 0;
+    transition: right 500ms ease 50ms; }
+  .button-1:hover {
+    background: #28724F; }
+    .button-1:hover span {
+      color: #28724F;
+      left: 5px; }
+    .button-1:hover .icon-wrapper svg {
+      right: 5px; }
 
 @keyframes icon-wrapper-expand {
   from {
@@ -90,3 +112,60 @@ hr {
 
 .button-1.button-test-out .icon-wrapper::before {
   animation: icon-wrapper-contract 250ms ease-in-out, icon-wrapper-bounce 400ms ease-out 250ms; }
+
+.button-2 {
+  padding: 6px 24px 6px 0; }
+  .button-2 .icon-wrapper {
+    z-index: 1; }
+
+@keyframes icon-wrapper-slide-in {
+  0% {
+    transform: translateX(0); }
+  50% {
+    transform: translateX(calc(var(--btn-width) + 3px)); }
+  100% {
+    transform: translateX(var(--btn-width)); } }
+
+@keyframes text-slide-in {
+  0% {
+    transform: translateX(0); }
+  50% {
+    transform: translateX(-29px); }
+  100% {
+    transform: translateX(-26px); } }
+
+@keyframes icon-wrapper-slide-out {
+  0% {
+    transform: translateX(var(--btn-width)); }
+  50% {
+    transform: translateX(-3px); }
+  100% {
+    transform: translateX(0); } }
+
+@keyframes text-slide-out {
+  0% {
+    transform: translateX(-26px); }
+  50% {
+    transform: translateX(3px); }
+  100% {
+    transform: translateX(0); } }
+
+.button-2.button-test-in .icon-wrapper {
+  animation-duration: 750ms;
+  animation-fill-mode: forwards;
+  animation-name: icon-wrapper-slide-in; }
+
+.button-2.button-test-in > span {
+  animation-duration: 750ms;
+  animation-fill-mode: forwards;
+  animation-name: text-slide-in; }
+
+.button-2.button-test-out .icon-wrapper {
+  animation-duration: 750ms;
+  animation-fill-mode: forwards;
+  animation-name: icon-wrapper-slide-out; }
+
+.button-2.button-test-out > span {
+  animation-duration: 750ms;
+  animation-fill-mode: forwards;
+  animation-name: text-slide-out; }
